@@ -8,8 +8,8 @@
 <td valign=top>
 	<img src="icon.png">
 <td valign=top>
-	<h2>Student Cliques</h2>
-	<b>Tutorial</b>
+        <h2>Student Cliques</h2>
+        <b>Tutorial 13 of WCSS Tutorial Series</b>
 </table>
 
 <p>
